fix: added min-width to c-social to avoid overlapp shrinking

--- a/src/styles/4-components/_c-social.scss
+++ b/src/styles/4-components/_c-social.scss
@@ -1,6 +1,7 @@
 
 .c-social {
     @include wt(third);
+    min-width: 200px;
     margin: 0 auto;
 
     display: flex;
